--- a/server/model-config.json
+++ b/server/model-config.json
@@ -33,10 +33,10 @@
     "dataSource": "db",
     "public": false
   },
-      "Email": {
-        "dataSource": "sendgrid",
-        "public": false
-    },
+  "Email": {
+    "dataSource": "sendgrid",
+    "public": false
+  },
   "Account": {
     "dataSource": "myDB",
     "public": true
@@ -82,6 +82,10 @@
     "public": true
   },
   "CommentLike": {
+    "dataSource": "myDB",
+    "public": true
+  },
+  "Participant": {
     "dataSource": "myDB",
     "public": true
   }
