--- a/server/model-config.json
+++ b/server/model-config.json
@@ -88,5 +88,9 @@
   "Participant": {
     "dataSource": "myDB",
     "public": true
+  },
+  "TicketPurchaseDetail": {
+    "dataSource": "myDB",
+    "public": true
   }
 }
