current build with email verification added

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -39,7 +39,10 @@
   },
   "Account": {
     "dataSource": "myDB",
-    "public": true
+    "public": true,
+    "options": {
+      "emailVerificationRequired": true
+    }
   },
   "container": {
     "dataSource": "myFile",
