current build with email verification added

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -34,7 +34,7 @@
     "public": false
   },
   "Email": {
-    "dataSource": "myEmailDataSource",
+    "dataSource": "sendgrid",
     "public": false
   },
   "Account": {
