--- a/server/model-config.json
+++ b/server/model-config.json
@@ -117,5 +117,9 @@
     "public": true,
     "$promise": {},
     "$resolved": true
+  },
+  "rating": {
+    "dataSource": "myDB",
+    "public": true
   }
 }
