add subscribers model and email verification link fixed

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -121,5 +121,9 @@
   "rating": {
     "dataSource": "myDB",
     "public": true
+  },
+  "subscribers": {
+    "dataSource": "myDB",
+    "public": true
   }
 }
