--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "pretest": "jshint ."
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "ee-first": "^1.1.1",
